[gd_scene load_steps=27 format=2]

[ext_resource path="res://Character/Player.gd" type="Script" id=1]
[ext_resource path="res://Character/life_status.gd" type="Script" id=2]
[ext_resource path="res://Character/temp_status.gd" type="Script" id=3]
[ext_resource path="res://Character/stat.gd" type="Script" id=4]
[ext_resource path="res://Character/damage_taker.gd" type="Script" id=5]
[ext_resource path="res://Character/character-body-boy-outline.svg" type="Texture" id=6]
[ext_resource path="res://Character/zombie-hand.svg" type="Texture" id=7]
[ext_resource path="res://Character/zombie1.svg" type="Texture" id=8]
[ext_resource path="res://Character/zombie_anim.tscn" type="PackedScene" id=9]
[ext_resource path="res://Character/posture.gd" type="Script" id=10]
[ext_resource path="res://Character/hand_switcher.gd" type="Script" id=11]
[ext_resource path="res://Character/zombie_punch.gd" type="Script" id=12]
[ext_resource path="res://Character/whoosh.wav" type="AudioStream" id=13]
[ext_resource path="res://Pickaxe/Weapon.gd" type="Script" id=14]
[ext_resource path="res://Character/movement_action.gd" type="Script" id=15]
[ext_resource path="res://Character/zombie_movement.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.243137, 0.854902, 0.266667, 0 ), Color( 0.243137, 0.854902, 0.266667, 1 ), Color( 0.243137, 0.854902, 0.266667, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.654902, 0.105882, 0 ), Color( 0.905882, 0.654902, 0.105882, 1 ), Color( 0.905882, 0.654902, 0.105882, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.654902, 0.105882, 0 ), Color( 0.905882, 0.654902, 0.105882, 0.376471 ), Color( 0.905882, 0.654902, 0.105882, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.854902, 0.243137, 0.243137, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.243137, 0.752941, 0.854902, 0 ), Color( 0.243137, 0.752941, 0.854902, 1 ), Color( 0.243137, 0.752941, 0.854902, 0 ) ]
}

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CircleShape2D" id=9]
radius = 1000.0

[sub_resource type="CircleShape2D" id=10]
radius = 90.0

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 429.246, 248.425 )
rotation = -3.14159
z_index = 1
collision_layer = 3
script = ExtResource( 1 )
posture = "free"

[node name="life" type="Node" parent="."]
script = ExtResource( 2 )
base_regen_rate = 0.0

[node name="temp" type="Node" parent="life"]
script = ExtResource( 3 )

[node name="heating" type="Node" parent="life/temp"]
script = ExtResource( 4 )

[node name="body" type="Area2D" parent="."]
rotation = -1.5708
collision_layer = 2
collision_mask = 6
script = ExtResource( 5 )

[node name="glow" type="Sprite" parent="body"]
modulate = Color( 0.243137, 0.854902, 0.266667, 0 )
texture = ExtResource( 6 )

[node name="anim" type="AnimationPlayer" parent="body/glow"]
anims/pulsate-life = SubResource( 1 )
anims/pulse-energy = SubResource( 2 )
anims/pulse-hunger = SubResource( 3 )
anims/pulse-hurt = SubResource( 4 )
anims/pulse-temperature = SubResource( 5 )

[node name="hand2" type="Area2D" parent="body"]
editor/display_folded = true
position = Vector2( 30, 30 )
collision_layer = 0
collision_mask = 2

[node name="spr" type="Sprite" parent="body/hand2"]
rotation = -1.5708
texture = ExtResource( 7 )

[node name="col" type="CollisionShape2D" parent="body/hand2"]
visible = false
rotation = -1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 6 )

[node name="hand1" type="Area2D" parent="body"]
editor/display_folded = true
position = Vector2( -30, 30 )
collision_layer = 0
collision_mask = 2

[node name="spr" type="Sprite" parent="body/hand1"]
rotation = -1.5708
texture = ExtResource( 7 )

[node name="col" type="CollisionShape2D" parent="body/hand1"]
visible = false
rotation = -1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 6 )

[node name="spr" type="Sprite" parent="body"]
texture = ExtResource( 8 )

[node name="hit-col" type="CollisionShape2D" parent="body"]
visible = false
rotation = -1.5708
scale = Vector2( 4.2, 4.2 )
shape = SubResource( 7 )

[node name="movement-col" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 4.2, 4.2 )
shape = SubResource( 8 )

[node name="anim" parent="." instance=ExtResource( 9 )]

[node name="free" type="Node" parent="."]
script = ExtResource( 10 )
transitions_from = PoolStringArray( "busy" )
transitions_animation = PoolStringArray( "put_back" )
idle_anim = "idle"

[node name="hand_switcher" type="Node" parent="free"]
script = ExtResource( 11 )

[node name="punch" type="Node" parent="free/hand_switcher"]
script = ExtResource( 12 )
lookat_smoothing = 0.05
lookat_min_distance = 100

[node name="audio" type="AudioStreamPlayer2D" parent="free/hand_switcher/punch"]
position = Vector2( 435.135, 240.512 )
rotation = -3.14159
stream = ExtResource( 13 )
volume_db = -7.257

[node name="hand_weapon" type="Node" parent="free/hand_switcher/punch"]
script = ExtResource( 14 )
tool_class = PoolStringArray( "hand", "axe", "scythe" )
hit_strength = 2

[node name="movement" type="Node" parent="free/hand_switcher/punch"]
script = ExtResource( 15 )
priority = -1

[node name="movement" type="Node" parent="free/hand_switcher/punch/movement"]
script = ExtResource( 16 )
base_value = 100

[node name="pull_out" type="Node" parent="free"]

[node name="player_detection" type="Area2D" parent="."]
editor/display_folded = true
collision_mask = 3

[node name="col" type="CollisionShape2D" parent="player_detection"]
visible = false
shape = SubResource( 9 )

[node name="punch_range" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 3

[node name="col" type="CollisionShape2D" parent="punch_range"]
visible = false
shape = SubResource( 10 )
[connection signal="area_entered" from="body" to="." method="_on_enter"]
[connection signal="area_exited" from="body" to="." method="_on_exit"]
[connection signal="area_entered" from="body/hand2" to="free/hand_switcher/punch/hand_weapon" method="_on_entered"]
[connection signal="area_exited" from="body/hand2" to="free/hand_switcher/punch/hand_weapon" method="_on_exited"]
[connection signal="body_entered" from="body/hand2" to="free/hand_switcher/punch/hand_weapon" method="_on_entered"]
[connection signal="body_exited" from="body/hand2" to="free/hand_switcher/punch/hand_weapon" method="_on_exited"]
[connection signal="area_entered" from="body/hand1" to="free/hand_switcher/punch/hand_weapon" method="_on_entered"]
[connection signal="area_exited" from="body/hand1" to="free/hand_switcher/punch/hand_weapon" method="_on_exited"]
[connection signal="body_entered" from="body/hand1" to="free/hand_switcher/punch/hand_weapon" method="_on_entered"]
[connection signal="body_exited" from="body/hand1" to="free/hand_switcher/punch/hand_weapon" method="_on_exited"]
[connection signal="body_entered" from="player_detection" to="free/hand_switcher/punch/movement/movement" method="on_player_enter"]
[connection signal="body_exited" from="player_detection" to="free/hand_switcher/punch/movement/movement" method="on_player_exit"]
[connection signal="body_entered" from="punch_range" to="free/hand_switcher/punch" method="on_enter"]
[connection signal="body_exited" from="punch_range" to="free/hand_switcher/punch" method="on_exit"]
